[package]
name = "test_ppm_decode"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ppm_decode = { path="../ppm_decode"}
#ppm_decode = {git= "https://github.com/tstellanova/ppm_decode" }
ppm_decode = "0.1.2"
embedded-hal = "0.2.3"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-rtt-core = "0.1.1"
stm32f4 = {version = "0.11", features = ["stm32f427"]  }
# stm32f4xx-hal = "0.8.1"
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = ["stm32f427", "rt"] }
lazy_static = {version="1.4.0", features=["spin_no_std"] }