[package]
name = "test_ppm_decode"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "Example of using the ppm_decode crate on a real microcontroller"

[dependencies]
ppm_decode = "0.1.3"
embedded-hal = "0.2.3"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-rtt-core = "0.1.1"
stm32f4 = {version = "0.11", features = ["stm32f427"]  }
# stm32f4xx-hal = "0.8.1"
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = ["stm32f427", "rt"] }
